deployment/4-kubernetes/runner/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compiler
  namespace: excellentia
  labels:
    app: compiler
spec:
  replicas: 4
  selector:
    matchLabels:
      app: compiler
  template:
    metadata:
      labels:
        app: compiler
    spec:
      containers:
        - name: compiler
          image: excellentia-compiler
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
