deployment/4-kubernetes/runner/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runner-service
  namespace: excellentia
  labels:
    app: runner
spec:
  selector:
      app: runner
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8090
  type: ClusterIP
